FE: Generate page almost finished

--- a/src/main/static/app.css
+++ b/src/main/static/app.css
@@ -6,7 +6,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Inter;
+    font-family: Inter, serif;
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -23,13 +23,13 @@ color: #FFF;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.right-section::-webkit-scrollbar {
+.right-password-section::-webkit-scrollbar, .right-generate-section::-webkit-scrollbar, .right-accounts-section::-webkit-scrollbar {
     display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.right-section {
--ms-overflow-style: none;  /* IE and Edge */
+.right-password-section, .right-generate-section, .right-accounts-section {
+-ms-overflow-style: none;   /* IE and Edge */
 scrollbar-width: none;  /* Firefox */
 }
 
@@ -48,8 +48,6 @@ scrollbar-width: none;  /* Firefox */
 
 /* LEFT SECTION */ 
 
-
-
 .left-section {
     background-color: #373434;
     width: 33%;
@@ -57,7 +55,7 @@ scrollbar-width: none;  /* Firefox */
     margin-left: 0;
 }
 
-.accounts-button > p, .passwords-button > p, .settings-button > p {
+.accounts-button > p, .passwords-button > p, .settings-button > p, .generate-button > p {
     color: #FFF;
     font-size: 15px;
     font-style: normal;
@@ -67,11 +65,11 @@ scrollbar-width: none;  /* Firefox */
     transition: all 0.5s ease;
 }
 
-.accounts-button, .passwords-button, .settings-button {
-    transition: all 0.5s ease;  
+.accounts-button, .passwords-button, .settings-button, .generate-button {
+    transition: all 0.5s ease;
 }
 
-.accounts-button:hover, .passwords-button:hover, .settings-button:hover{
+.accounts-button:hover, .passwords-button:hover, .settings-button:hover, .generate-button:hover {
     background-color: #282626;
     border-radius: 50px 0px 0px 50px;
     padding-left: 20px;
@@ -94,7 +92,7 @@ scrollbar-width: none;  /* Firefox */
     align-items: flex-end;
 }
 
-.accounts-button, .passwords-button, .settings-button {
+.accounts-button, .passwords-button, .settings-button, .generate-button {
     width: 100%;
     padding: 5px;
 }
@@ -103,9 +101,7 @@ scrollbar-width: none;  /* Firefox */
 
 /* RIGHT SECTION */
 
-
-
-.right-section {
+.right-password-section, .right-generate-section, .right-accounts-section{
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 30px;
@@ -115,6 +111,8 @@ scrollbar-width: none;  /* Firefox */
     scroll-behavior: smooth;
     overflow-y: scroll;
 }
+
+/* Password Section */
 
 .title {
     height: 7%;
@@ -200,7 +198,134 @@ scrollbar-width: none;  /* Firefox */
 }
 
 
+/* ----------  */
+/* GENERATE SECTION */
 
+.switch-part-header {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.simple-gen-button {
+    background-color: #282626;
+    align-self: center;
+    justify-content: center;
+    color: #0B99FF;
+    font-weight: 800;
+    width: 50%;
+    border: none;
+
+    transition: all 0.5s ease;
+}
+
+.advanced-gen-button {
+    position: relative;
+    width: 50%;
+    background-color: rgb(40, 38, 38);
+    border: none;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
+    box-shadow: inset 0 -5px 10px -3px #00000030;
+}
+
+
+.simple-gen-button:hover, .advanced-gen-button:hover {
+    cursor: pointer;
+}
+
+.main-simple-content {
+    padding-top: 8%;
+    display: flex;
+    justify-content: center;
+    gap:30px;
+
+}
+
+.checkbox-part {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 8%;
+    color: white;
+    text-transform: capitalize;
+}
+
+.checkbox-container {
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    font-size: 12px;
+    user-select: none;
+}
+
+.checkbox-line {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    width: 100%;
+
+}
+
+/* Hide the browser's default checkbox */
+.checkbox-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    align-self: center;
+    justify-self: center;
+    border-radius: 25%;
+    background-color: #D9D9D9;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+}
+
+/* On mouse-over, add a grey background color */
+.checkbox-container:hover input ~ .checkmark {
+    background-color: grey;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkbox-container input:checked ~ .checkmark {
+    background-color:#0B99FF;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.checkbox-container input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox-container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+/* ----------  */
 /* ACCOUNT SECTION */
 
 
@@ -415,3 +540,97 @@ scrollbar-width: none;  /* Firefox */
     display: flex;
     justify-content: center;
 }
+
+/* CIRCLE INPUT CSS - DO NOT TOUCH*/
+
+.circle-input {
+    font-family: 'Popins', sans-serif;
+    width: 200px;
+    height: 200px;
+    position: relative;
+    margin: 1em;
+    top: 20px;
+}
+
+.extern{
+    box-sizing: border-box;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    background-color: #D9D9D9;
+    box-shadow: 0px 0px 4px 10px rgba(0, 0, 0, 0.25);
+    padding: 10px;
+    position: relative;
+}
+
+.outer {
+    box-sizing: border-box;
+    height: 180px;
+    width: 180px;
+
+    border-radius: 50%;
+    padding: 19px;
+    box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.15),
+             -6px -6px 10px -1px rgba(255, 255, 255, 0.7);
+}
+
+.inner{
+    height: 140px;
+    width: 140px;
+
+    border-radius: 50%;
+    box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0, 0.2),
+              inset -4px -4px 6px -1px rgba(255,255,255,0.7),
+              -0.5px -0.5px 0px rgba(255, 255, 255, 1),
+              0.5px 0.5px 0px rgba(0,0,0,0.15),
+              0px 12px 10px -10px rgba(0, 0, 0, 0.05);
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
+
+#circle-text {
+    font-size: x-small;
+    font-weight: 800;
+    user-select: none;
+    text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.2);
+}
+
+#circle-output{
+    font-size:xxx-large;
+    font-weight: bolder;
+    color: black;
+    align-self: center;
+    user-select: none;
+    text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.5);
+}
+
+
+circle {
+    fill: none;
+    stroke-width: 20px;
+    stroke-dasharray: 502;
+    stroke: red;
+}
+
+svg {
+    position: absolute;
+    transform: rotate(-90deg);
+    top: 0;
+    left:0;
+}
+
+.circular-input {
+    position: absolute;
+    width: 22px;
+    height: 22px;
+    background-color: #646464;
+    border: 2px solid white;
+    border-radius: 50%;
+    cursor: grab;
+    z-index: 2;
+    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.5);
+}
+
+/* ----------- */
