--- a/src/main/views/app.jinja2
+++ b/src/main/views/app.jinja2
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,21 @@
     <link rel="stylesheet" href="../static/app.css">
     <script src="https://kit.fontawesome.com/740ac721d2.js" crossorigin="anonymous"></script>
 </head>
-<body onload="createBridge()">
+
+<body onload="createBridge(); startScript()">
     <div class="main-container">
         <div class="left-section">
             <div class="top-elements">
-                <div class="accounts-button">
-                    <p>Accounts</p>
-                </div>
                 <div class="passwords-button">
-                    <p>Passwords</p>
+                    <p onclick="showRightSection('password')">Passwords</p>
                 </div>
+                <div class="generate-button">
+                    <p onclick="showRightSection('generate')">Generate</p>
+                </div>
+                <div class="accounts-button">
+                    <p onclick="showRightSection('account')">Accounts</p>
+                </div>
+
             </div>
             <div class="bottom-element">
                 <div class="settings-button">
@@ -24,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div class="right-section">
+        <div class="right-password-section" style="display: none">
             <div id="top-element"></div>
             <div class="title">
                 <p>Salut, {{ username }}</p>
@@ -62,50 +68,113 @@
             </div>
             <div class="accounts-section">
                 {% for passwd in passwords %}
-                    <div class="account">
-                        <div class="logo-left"> <i class="fab fa-twitter"></i> </div>
-                        <div class="center-elements">
-                            <div class="top-center">
-                                <p>Site Web</p>
-                                <input type="text" disabled value="{{ passwd.target }}" id="site-{{ passwd.id }}">
-                                <div class="logo-external-link"> <i class="fas fa-external-link-alt" onclick="openTarget('{{ passwd.target }}')"></i> </div>
-                            </div>
-                            <div class="bottom-center">
-                                <div class="username-section">
-                                    <p>Username/Mail Address</p>
-                                    <div class="field-username">
-                                        <div class="username-zone">
-                                            <input type="text" value="{{ passwd.username }}" disabled id="username-{{ passwd.id }}">
-                                        </div>
-                                        <div class="copy-logo"> <i class="fas fa-copy" onclick="copyToClipboard('username-{{ passwd.id }}')"></i> </div>
+                <div class="account">
+                    <div class="logo-left"> <i class="fab fa-twitter"></i> </div>
+                    <div class="center-elements">
+                        <div class="top-center">
+                            <p>Site Web</p>
+                            <input type="text" disabled value="{{ passwd.target }}" id="site-{{ passwd.id }}">
+                            <div class="logo-external-link"> <i class="fas fa-external-link-alt"
+                                    onclick="openTarget('{{ passwd.target }}')"></i> </div>
+                        </div>
+                        <div class="bottom-center">
+                            <div class="username-section">
+                                <p>Username/Mail Address</p>
+                                <div class="field-username">
+                                    <div class="username-zone">
+                                        <input type="text" value="{{ passwd.username }}" disabled
+                                            id="username-{{ passwd.id }}">
                                     </div>
+                                    <div class="copy-logo"> <i class="fas fa-copy"
+                                            onclick="copyToClipboard('username-{{ passwd.id }}')"></i> </div>
                                 </div>
-                                <div class="password-section">
-                                    <p>Password</p>
-                                    <div class="field-password">
-                                        <div class="password-zone">
-                                            <input value="{{ passwd.password }}" disabled type="password" id="password-{{ passwd.id }}">
-                                            <div class="logo-see-pw"> <i class="fas fa-eye-slash" onclick="reveal({{ passwd.id }})"></i> </div>
-                                        </div>
-                                        <div class="copy-logo"> <i class="fas fa-copy" onclick="copyToClipboard('password-{{ passwd.id }}')"></i> </div>
+                            </div>
+                            <div class="password-section">
+                                <p>Password</p>
+                                <div class="field-password">
+                                    <div class="password-zone">
+                                        <input value="{{ passwd.password }}" disabled type="password"
+                                            id="password-{{ passwd.id }}">
+                                        <div class="logo-see-pw"> <i class="fas fa-eye-slash"
+                                                onclick="reveal({{ passwd.id }})"></i> </div>
                                     </div>
+                                    <div class="copy-logo"> <i class="fas fa-copy"
+                                            onclick="copyToClipboard('password-{{ passwd.id }}')"></i> </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="logo-modify"> <i class="fas fa-user-edit" onclick="enableModification({{ passwd.id }})" id="modif-{{ passwd.id }}"></i> </div>
                     </div>
+                    <div class="logo-modify"> <i class="fas fa-user-edit" onclick="enableModification({{ passwd.id }})"
+                            id="modif-{{ passwd.id }}"></i> </div>
+                </div>
                 {% endfor %}
             </div>
             <a href="#top-element"><i class="fas fa-arrow-circle-up"></i></a>
         </div>
+        <div class="right-generate-section" >
+            <div id="top-element"></div>
+            <div class="title">
+                <p>Generate Random Password</p>
+            </div>
+
+            <!-- SWITCH HEADER -->
+            <div class="switch-part-header">
+                <button class="simple-gen-button">SIMPLE</button>
+                <button class="advanced-gen-button">ADVANCED</button>
+            </div>
+            <!-- SIMPLE GEN PART -->
+            <div class="simple-generate-part">
+
+                <!-- CIRCLE INPUT -->
+                <div class="main-simple-content">
+                    <div class="circle-input">
+                    <div class="extern">
+                        <div class="circular-input"></div>
+                        <div class="outer">
+                            <div class="inner">
+                                <div id="circle-text">CHARACTERS</div>
+                                <div id="circle-output">1</div>
+                            </div>
+                        </div>
+                    </div>
+                    <svg width="200px" height="200px">
+                        <circle cx="100" cy="100" r="80" stroke-linecap="round" id="rotating-circle"></circle>
+                    </svg>
+                </div>
+                    <div class="checkbox-part" >
+                        <div class="checkbox-line">
+                            <label class="checkbox-container">INCLUDE NUMBERS
+                                  <input type="checkbox" checked="checked">
+                                  <span class="checkmark"></span>
+                            </label>
+                        </div>
+                        <div class="checkbox-line">
+                            <label class="checkbox-container">INCLUDE SYMBOLS
+                                  <input type="checkbox">
+                                  <span class="checkmark"></span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!-- ADVANCED GEN PART -->
+            <div class="advanced-generate-part"></div>
+        </div>
+        <div class="right-accounts-section" style="display: none"></div>
     </div>
-    
-        
 </body>
+
 </html>
 
 <!-- import Qt library  -->
 <script src="qrc:///qtwebchannel/qwebchannel.js"></script>
+
+<!-- import gradient circle JS functions -->
+<script src="../static/GradientCircle.js"></script>
+
+<!-- import single color circle JS functions -->
+<!-- <script src="../static/circle.js"></script> -->
 
 <script>
 
@@ -113,20 +182,37 @@
     let mybutton = document.getElementsByClassName("fas fa-arrow-circle-up");
 
     // When the user scrolls down 20px from the top of the document, show the button
-    window.onscroll = function() {scrollFunction()};
+    window.onscroll = function () { scrollFunction() };
 
     function scrollFunction() {
-      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        mybutton.style.display = "block";
-      } else {
-        mybutton.style.display = "none";
-      }
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            mybutton.style.display = "block";
+        } else {
+            mybutton.style.display = "none";
+        }
+    }
+
+    function showRightSection(section) {
+        if (section === "generate") {
+            document.getElementsByClassName("right-generate-section")[0].style.display = "block";
+            document.getElementsByClassName("right-accounts-section")[0].style.display = "none";
+            document.getElementsByClassName("right-password-section")[0].style.display = "none";
+            startScript();
+        } else if (section === "account") {
+            document.getElementsByClassName("right-generate-section")[0].style.display = "none";
+            document.getElementsByClassName("right-accounts-section")[0].style.display = "block";
+            document.getElementsByClassName("right-password-section")[0].style.display = "none";
+        } else {
+            document.getElementsByClassName("right-generate-section")[0].style.display = "none";
+            document.getElementsByClassName("right-accounts-section")[0].style.display = "none";
+            document.getElementsByClassName("right-password-section")[0].style.display = "block";
+        }
     }
 
     // When the user clicks on the button, scroll to the top of the document
     function topFunction() {
-      document.body.scrollTop = 0;
-      document.documentElement.scrollTop = 0;
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
     }
 
     function copyToClipboard(id) {
@@ -150,8 +236,8 @@
         const password = document.getElementById("password-" + id).value;
 
         // Set actions for cancel and apply buttons
-        document.getElementById("cancel-" + id).onclick = function() {cancelModification(id, site, username, password)};
-        document.getElementById("save-" + id).onclick = function() {applyModification(id)};
+        document.getElementById("cancel-" + id).onclick = function () { cancelModification(id, site, username, password) };
+        document.getElementById("save-" + id).onclick = function () { applyModification(id) };
 
         // Enable inputs
         document.getElementById("site-" + id).disabled = false;
@@ -203,10 +289,10 @@
     // Create the QWebChannel object and connect to the bridge
     async function createBridge() {
         await new QWebChannel(qt.webChannelTransport, function (channel) {
-        window.bridge = channel.objects.bridge;
+            window.bridge = channel.objects.bridge;
 
-        printPY = bridge.printJS;
-    });
+            printPY = bridge.printJS;
+        });
     }
 
     function addPassword() {
@@ -215,23 +301,23 @@
 
     // Function to show the popup
     function showPasswordPopup() {
-      var popup = document.getElementById("popup");
-      popup.style.display = "block";
+        var popup = document.getElementById("popup");
+        popup.style.display = "block";
     }
 
     // Function to hide the popup
     function hidePopup() {
-      var popup = document.getElementById("popup");
-      popup.style.display = "none";
+        var popup = document.getElementById("popup");
+        popup.style.display = "none";
     }
 
     // Get the input field
-    var input = document.getElementById("password");
+    const passwd_input = document.getElementById("password");
 
     // Execute a function when the user presses a key on the keyboard
-    input.addEventListener("keypress", function(event) {
+    passwd_input.addEventListener("keypress", function (event) {
         // If the user presses the "Enter" key on the keyboard
-        if (event.key === "Enter" && document.getElementById("username").value !== ""  && input.value !== "") {
+        if (event.key === "Enter" && document.getElementById("username").value !== "" && passwd_input.value !== "") {
             // Cancel the default action, if needed
             event.preventDefault();
             // Trigger the button element with a click
@@ -256,4 +342,3 @@
         }
     }
 </script>
-
