--- a/src/main/static/app.css
+++ b/src/main/static/app.css
@@ -50,7 +50,7 @@ scrollbar-width: none;  /* Firefox */
 
 .left-section {
     background-color: #373434;
-    width: 33%;
+    width: 25%;
     height: 100vh;
     margin-left: 0;
 }
@@ -102,11 +102,11 @@ scrollbar-width: none;  /* Firefox */
 /* RIGHT SECTION */
 
 .right-password-section, .right-generate-section, .right-accounts-section{
+    width: 75%;
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 30px;
     background-color: #282626;
-    width: 67%;
     height: 100%;
     scroll-behavior: smooth;
     overflow-y: scroll;
@@ -201,7 +201,14 @@ scrollbar-width: none;  /* Firefox */
 /* ----------  */
 /* GENERATE SECTION */
 
+.right-generate-section {
+    margin-right: 0;
+    margin-left: 0;
+}
+
 .switch-part-header {
+    margin-top: 10px;
+    height: 30px;
     display: flex;
     justify-content: space-evenly;
 }
@@ -223,9 +230,10 @@ scrollbar-width: none;  /* Firefox */
     width: 50%;
     background-color: rgb(40, 38, 38);
     border: none;
+    font-weight: 800;
     border-bottom: 2px solid black;
     border-left: 2px solid black;
-    box-shadow: inset 0 -5px 10px -3px #00000030;
+    box-shadow: inset 0px -10px 10px -10px rgba(0, 0, 0, 1);
 }
 
 
@@ -234,11 +242,13 @@ scrollbar-width: none;  /* Firefox */
 }
 
 .main-simple-content {
-    padding-top: 8%;
+    margin-top: 10px;
+    margin-bottom: 5%;
     display: flex;
     justify-content: center;
     gap:30px;
-
+    margin-right: 30px;
+    margin-left: 30px;
 }
 
 .checkbox-part {
@@ -253,11 +263,16 @@ scrollbar-width: none;  /* Firefox */
 
 .checkbox-container {
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding-left: 35px;
     margin-bottom: 20px;
     cursor: pointer;
     font-size: 12px;
     user-select: none;
+    height: 25px;
+    font-weight: 800;
 }
 
 .checkbox-line {
@@ -265,7 +280,6 @@ scrollbar-width: none;  /* Firefox */
     justify-content: center;
     align-items: baseline;
     width: 100%;
-
 }
 
 /* Hide the browser's default checkbox */
@@ -323,6 +337,56 @@ scrollbar-width: none;  /* Firefox */
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+}
+
+.bottom-gen-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#generate-btn, #save-gen-btn {
+    border: none;
+    width: 100px;
+    height: 50px;
+    border-radius: 20px;
+    background-color: #0B99FF;
+    box-shadow: 0px 0px 2px 7px rgb(0, 0, 0, 0.2);
+
+}
+
+#generate-btn:hover {
+    cursor: pointer;
+    background-color: #0666A9FF;
+    border: 2px solid #D9D9D9;
+}
+
+#save-gen-btn {
+    height: 40px;
+}
+
+.generated-content {
+    display: flex;
+}
+
+.box-generated-content {
+    margin-top: 5%;
+    border-radius: 20px;
+    background-color: #373434;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    width: 50%;
+    height: 40px;
+}
+
+#generated-passwd {
+    padding-left: 10px;
+    background-color: #373434;
+    border: none;
+    border-radius: 20px;
+    color: white;
 }
 
 /* ----------  */
@@ -577,7 +641,6 @@ scrollbar-width: none;  /* Firefox */
 .inner{
     height: 140px;
     width: 140px;
-
     border-radius: 50%;
     box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0, 0.2),
               inset -4px -4px 6px -1px rgba(255,255,255,0.7),
