FE: Generate page 8/10

--- a/src/main/views/app.jinja2
+++ b/src/main/views/app.jinja2
@@ -163,9 +163,13 @@
             <div class="advanced-generate-part" style="display: none"></div>
             <div class="bottom-gen-content">
                 <button id="generate-btn">Go!</button>
-                <div class="generated-content">
+                <br>
+                <div class="generated-part">
                     <div class="box-generated-content">
-                        <input id="generated-passwd" disabled value="nfilwefwe"></input>
+                        <div class="input-container">
+                            <div id="generated-passwd"></div>
+                        </div>
+
                         <img id="copy-gen-passwd" src="../resources/copy_filled_icon_202354.ico" width="30px" height=30px">
                     </div>
                     <button id="save-gen-btn">Save</button>
