--- a/src/main/static/app.css
+++ b/src/main/static/app.css
@@ -348,45 +348,98 @@ scrollbar-width: none;  /* Firefox */
 
 #generate-btn, #save-gen-btn {
     border: none;
+    font-weight: 800;
     width: 100px;
     height: 50px;
     border-radius: 20px;
     background-color: #0B99FF;
-    box-shadow: 0px 0px 2px 7px rgb(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 2px 3px rgb(0, 0, 0, 0.2);
 
 }
 
-#generate-btn:hover {
+#generate-btn:hover, #save-gen-btn:hover {
     cursor: pointer;
     background-color: #0666A9FF;
     border: 2px solid #D9D9D9;
+}
+
+.generated-part {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    gap: 15px;
+    filter: blur(10px);
+}
+
+.box-generated-content {
+    border-radius: 20px;
+    background-color: #373434;
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    width: 100%;
+    height: 60px;
+    box-shadow: 0px 0px 2px 3px rgb(0, 0, 0, 0.2);
 }
 
 #save-gen-btn {
     height: 40px;
 }
 
-.generated-content {
-    display: flex;
-}
-
-.box-generated-content {
-    margin-top: 5%;
+.input-container {
+    width: 200px;
+    border: none;
+    overflow-x: auto;
     border-radius: 20px;
-    background-color: #373434;
+    overflow-y: hidden;
+    margin: 3px;
+    margin-left: 10px;
     display: flex;
-    justify-content: space-evenly;
     align-content: center;
-    width: 50%;
-    height: 40px;
-}
+    justify-content: center;
+  }
 
 #generated-passwd {
-    padding-left: 10px;
-    background-color: #373434;
+    align-self: center;
+    font-size: 20px;
+    white-space: nowrap;
+    padding: 5px;
+    display: inline-block;
+    background-color: transparent;
+    resize: none; /* Disable textarea resizing */
+    color: white;
+    font-weight: 600;
+}
+
+.input-container::-webkit-scrollbar {
+    height: 7px;
+}
+
+.input-container::-webkit-scrollbar-thumb {
+    background-color: #222222; /* Color of the scrollbar thumb */
+    border-radius: 4px; /* Rounded edges for the thumb */
+}
+
+.input-container::-webkit-scrollbar-track {
+    background-color: transparent; /* Color of the track behind the thumb */
+}
+
+#save-gen-btn {
+    align-self: center;
     border: none;
     border-radius: 20px;
-    color: white;
+    font-weight: 600;
+    font-size: 14px;
+    background-color: #0B99FF;
+    width: 60px;
+}
+
+#copy-gen-passwd {
+    align-self: center;
+    justify-self: center;
+    margin-right: 5px;
+
 }
 
 /* ----------  */
